rpi5/media/plex/plex.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  serviceName: plex
  template:
    metadata:
      name: plex
      labels:
        app: plex
    spec:
      hostNetwork: true
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4@sha256:3f71bd6eb6a4478ac19b11c5d0ba9746a5eacad1976f9b99ed4a2c21767e57bb
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /dev/dri
              name: dev-dri
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi
              gpu.intel.com/i915: "1"
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 32400
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            privileged: true
      securityContext:
        fsGroup: 3002
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
            type: Directory
        - name: dev-dri
          hostPath:
            path: /dev/dri
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
