rpi5/media/plex/plex-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.local`) || Host(`plex.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: plex
          port: 80
  tls:
    secretName: plex-cert-tls
    domains:
      - main: plex.local
        sans:
          - plex.internal
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 80
      targetPort: 32400
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: plex
      port:
        number: 80
  tls:
    - hosts:
        - plex
